[tool.poetry]
name = "blawgsum-ai"
version = "0.1.0"
description = ""
authors = ["Adrian Moses <adrian@adrianmoses.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
ollama = "^0.1.6"
openai = "^1.12.0"
langchain = "^0.1.6"
langchain-community = "^0.0.19"
cohere = "^4.47"
transformers = "^4.37.2"
pinecone-client = "^3.0.2"
langchain-openai = "^0.0.6"
google-cloud-translate = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
